--- a/react-emma-john-ph/src/components/shop/Shop.css
+++ b/react-emma-john-ph/src/components/shop/Shop.css
@@ -10,6 +10,8 @@
 .cart-container {
   background-color: #ffe0b3;
   padding: 0.8rem;
+  position: sticky;
+  margin-top: 0;
 }
 .cart-container h3 {
   font-family: "Lato";
