--- a/react-emma-john-ph/src/components/shop/Shop.css
+++ b/react-emma-john-ph/src/components/shop/Shop.css
@@ -11,7 +11,7 @@
   background-color: #ffe0b3;
   padding: 0.8rem;
   position: sticky;
-  margin-top: 0;
+  margin-top: 0px;
 }
 .cart-container h3 {
   font-family: "Lato";
